# foto-kocourkovi_v1

./: .dockerignore  .env.example  .env.prod.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml
apps/accounts/: admin.py  apps.py  managers.py  models.py
apps/accounts/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_email_and_more.py
apps/clients/: admin.py  apps.py  models.py
apps/clients/migrations/: 0001_initial.py
apps/common/: apps.py  enums.py
apps/galleries/: admin.py  apps.py  models.py  urls.py  views.py
apps/galleries/migrations/: 0001_initial.py
apps/jobs/: admin.py  apps.py  models.py
apps/jobs/migrations/: 0001_initial.py
apps/orders/: admin.py  apps.py  emails.py  forms.py  models.py  services.py  urls.py  views.py
apps/orders/migrations/: 0001_initial.py  0002_galleryorder_unique_draft_per_gallery_session.py  0003_galleryorder_internal_fields_and_statuses.py  0004_galleryorder_customer_fields.py  0005_galleryorderevent.py  0006_alter_galleryorderevent_created_at_and_more.py
apps/photos/: admin.py  apps.py  forms.py  models.py  services.py
apps/photos/migrations/: 0001_initial.py  0002_photo_original_filename.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  local.py  prod.py
deploy/nginx/: fotky.foto-kocourkovi.cz.conf
static/admin/: custom.css
templates/client/: base.html
templates/galleries/: client_gallery.html
templates/orders/: cart_detail.html  order_confirmation.html
templates/orders/email/: order_submitted_client.html  (+1 more)
(+3 files in other folders)
